Urls and views no longer need pk to display user info.

--- a/tracker/templates/tracker/profile_page.html
+++ b/tracker/templates/tracker/profile_page.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <h2>Profile Details</h2>
-    <li>First Name:  {{ profile.first_name }} </li>
-    <li>Last Name:  {{ profile.last_name }}</li>
-    <li>User Name: {{ profile.username }}</li>
-    <li>Email: {{ profile.email }}</li>
+    <li>First Name:  {{ profile.user.first_name }} </li>
+    <li>Last Name:  {{ profile.user.last_name }}</li>
+    <li>User Name: {{ profile.user.username }}</li>
+    <li>Email: {{ profile.user.email }}</li>
     <li>DOB:  {{ profile.birth_date }}</li>
     <li>Country: {{ profile.country }}</li>
     <li>Time Zone: {{ profile.time_zone }}</li>
