Added exercise pages.
- added links to exercise pages in the exercises/ page

--- a/tracker/templates/tracker/exercises.html
+++ b/tracker/templates/tracker/exercises.html
@@ -3,10 +3,13 @@
 
 {% block content %}
 
-<h2> {{ profile.first_name }} {{ profile.last_name }} </h2>
-<h3> {{ profile.username }} </h3>
+<h2> {{ profile.user.first_name }} {{ profile.user.last_name }} </h2>
+<h4> {{ profile.user.username }} </h3>
   {% for exercise in profile.all_exercises %}
     {# have a link to the individual exercises here #}
-    <li>{{ exercise }} </li>
+    <li>
+      - <a href="{{ exercise.get_absolute_url }}"> {{ exercise.name }} </a>
+    </li>
   {% endfor %}
-{% endblock %} 
+
+{% endblock %}
